  by the previous GC cycle instead of an indirect (and noisy) computation
  of the current overhead.
  (Damien Doligez, review by Stephen Dolan)

### Code generation and optimizations:

- #1400: Add an optional invariants check on Cmm, which can be activated
  with the -dcmm-invariants flag
  (Vincent Laviron, with help from Sebastien Hinderer, review by Stephen Dolan
   and David Allsopp)

- #9876: do not cache the young_limit GC variable in a processor register.
  This affects the ARM64, PowerPC and RISC-V ports, making signal handling
  and minor GC triggers more reliable, at the cost of a small slowdown.
  (Xavier Leroy, review by Nicolás Ojeda Bär)

- #9937: improvements in ARM64 code generation (constants, sign extensions)
  (Xavier Leroy, review by Stephen Dolan)

- #10228: Better code-generation for inlined comparisons
  (Stephen Dolan, review by Alain Frisch and Xavier Leroy)

- #10244: Optimise Int32.unsigned_to_int
  (Fabian Hemmer, review by Stephen Dolan and Xavier Leroy)

- #10302, #10303: Fix incorrect instruction selection for string constant loads
  on ppc.
  (David Allsopp, review by Stephen Dolan)

- #10349: Fix destroyed_at_c_call on RISC-V
  (Mark Shinwell, review by Nicolás Ojeda Bär)

- #10404: Add a generic backward dataflow analyzer and use it to speed up
  liveness analysis
  (Xavier Leroy, review by Gabriel Scherer, Greta Yorsh, Mark Shinwell)

- #10414: Avoid compilation times exponential in the nesting of loops
  in the spilling and reloading passes
  (Xavier Leroy, review by Vincent Laviron)

- #10419: Add %frame_pointers primitive which is true only in native code with
  frame pointers mode enabled.
  (David Allsopp, review by Vincent Laviron and Mark Shinwell)

### Type system:

* #10081: Typecheck `x |> f` and `f @@ x` as `(f x)`
  (Alain Frisch, review by Jacques Garrigue, Josh Berdine and Thomas Refis)

### Standard library:

- #9448: Add String.{empty,cat} as dual of Bytes.{empty,cat},